<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_inicio"
        android:icon="@drawable/ic_home"
        android:title="@string/inicio" />

    <item
        android:id="@+id/nav_departamentos"
        android:icon="@drawable/ic_location"
        android:title="@string/departamentos" />

    <item
        android:id="@+id/nav_favoritos"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favoritos" />

    <item
        android:id="@+id/nav_carpetas"
        android:icon="@android:drawable/ic_menu_save"
        android:title="Mis Colecciones" />

    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/ic_person"
        android:title="@string/perfil" />

</menu>
